finished about me

--- a/index.html
+++ b/index.html
@@ -3,18 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>About Me</title>
 </head>
 <body>
-    <h1>Jacob Huff</h1>
-    <img src="bball.jpg"/>
-    <h2>A photo of me back when I was a baby in high school.</h2>
-    <ul>
-        <li>Dogs are my favorite animal</li>
-        <li>I love trying new foods</li>
-        <li>I love traveling and exploring new cities</li>
-    </ul>
+    <div class="center">
+        <h1>Jacob Huff</h1>
+        <img src="bball.jpg"/>
+        <h2>A photo of me back when I was a baby in high school.</h2>
+        <ul>
+            <li>Dogs are my favorite animal</li>
+            <li>I love trying new foods</li>
+            <li>I love traveling and exploring new cities</li>
+        </ul>
 
-    <a href="https://www.linkedin.com/jacobhuff">LinkedIn</a>
+        <p><a href="https://www.linkedin.com/in/jacobhuff1/" target="_blank">LinkedIn</a></p>
+    </div>
 </body>
 </html>
