added jobs and education pages

--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About Me</title>
+    <title>Education</title>
 </head>
 <body>
     <ul id="navbar">
@@ -12,18 +12,15 @@
         <li><a href="./jobs.html">Jobs</a></li>
         <li><a href="./education.html">Education</a></li>
     </ul>
-
+    
     <div class="main">
-        <h1>Jacob Huff</h1>
-        <img src="bball.jpg"/>
-        <h2>A photo of me back when I was a baby in high school.</h2>
+        <h1>Education</h1>
+        <img id="kentucky-image" src="kentucky.jpg"/>
+        <h2>The University of Kentucky in Lexington, KY</h2>
         <ul class="list">
-            <li>Dogs are my favorite animal</li>
-            <li>I love trying new foods</li>
-            <li>I love traveling and exploring new cities</li>
+            <li>Graduated with a degree in Computer Science</li>
+            <li>Most classes focused on math and theory behind the programming</li>
         </ul>
-
-        <p><a href="https://www.linkedin.com/in/jacobhuff1/" target="_blank">LinkedIn</a></p>
     </div>
 </body>
 </html>
