--- a/jobs.html
+++ b/jobs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>About Me</title>
+    <title>Job History</title>
 </head>
 <body>
     <ul id="navbar">
@@ -14,16 +14,14 @@
     </ul>
 
     <div class="main">
-        <h1>Jacob Huff</h1>
-        <img src="bball.jpg"/>
-        <h2>A photo of me back when I was a baby in high school.</h2>
+        <h1>Job History</h1>
+        <img src="tata.jpg"/>
+        <h2>Software Developer at Tata Consultancy Services</h2>
         <ul class="list">
-            <li>Dogs are my favorite animal</li>
-            <li>I love trying new foods</li>
-            <li>I love traveling and exploring new cities</li>
+            <li>Worked in teams to create a website</li>
+            <li>Studied and learned new technolgies</li>
+            <li>Built full stack websites on my own</li>
         </ul>
-
-        <p><a href="https://www.linkedin.com/in/jacobhuff1/" target="_blank">LinkedIn</a></p>
     </div>
 </body>
 </html>
