added more styling

--- a/education.html
+++ b/education.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Education</title>
 </head>
@@ -15,7 +16,7 @@
     
     <div class="main">
         <h1>Education</h1>
-        <img id="kentucky-image" src="kentucky.jpg"/>
+        <img id="kentucky-image" src="images/kentucky.jpg"/>
         <h2>The University of Kentucky in Lexington, KY</h2>
         <ul class="list">
             <li>Graduated with a degree in Computer Science</li>
