--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>About Me</title>
 </head>
 <body>
     <ul id="navbar">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="./index.html"><strong>Home</strong></a></li>
         <li><a href="./jobs.html">Jobs</a></li>
         <li><a href="./education.html">Education</a></li>
     </ul>
 
     <div class="main">
-        <h1>Jacob Huff</h1>
-        <img src="bball.jpg"/>
-        <h2>A photo of me back when I was a baby in high school.</h2>
+        <h1 id="my-name">Jacob Huff</h1>
+        <div class="img-container"><img id="headshot" src="images/headshot.jpg" alt="Jacob Huff"></div>
+        <h3 id="fun-facts"><u>Some fun facts about me</u></h3>
         <ul class="list">
             <li>Dogs are my favorite animal</li>
             <li>I love trying new foods</li>
             <li>I love traveling and exploring new cities</li>
         </ul>
 
-        <p><a href="https://www.linkedin.com/in/jacobhuff1/" target="_blank">LinkedIn</a></p>
+        <p>Check out my <a id="linkedin" href="https://www.linkedin.com/in/jacobhuff1/" target="_blank">LinkedIn</a>!</p>
     </div>
 </body>
 </html>
