--- a/jobs.html
+++ b/jobs.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Job History</title>
 </head>
@@ -15,7 +16,7 @@
 
     <div class="main">
         <h1>Job History</h1>
-        <img src="tata.jpg"/>
+        <img src="images/tata.jpg"/>
         <h2>Software Developer at Tata Consultancy Services</h2>
         <ul class="list">
             <li>Worked in teams to create a website</li>
