--- a/jobs.html
+++ b/jobs.html
@@ -16,7 +16,7 @@
 
     <div class="main">
         <h1>Job History</h1>
-        <img src="images/tata.jpg"/>
+        <img id="tata-img" src="images/tata.jpg" alt="Tata Consultancy Services"/>
         <h2>Software Developer at Tata Consultancy Services</h2>
         <ul class="list">
             <li>Worked in teams to create a website</li>
